# citegeist

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Gemini_Evaluator.py  README.md  azure_client.py  baseline.ipynb  baseline.py  citations.py  data_ingest.py  data_ingest_filtered.py  database_mini.db  diversity_plus_extraction.ipynb  embeddingBase.py  eval.py  eval_anthropic.py  eval_gpt.py  evaluate-2.py  evaluate.py  evaluation-arxiv-ids-full-pdf.py  evaluation-arxiv-ids.py  evaluation-baseline.py  evaluation-old.py  evaluation-optimized-pipeline-full-pdf.py  evaluation-optimized-pipeline.py  evaluation-win-rate.py  generator.py  hash.py  hash_sqlite.py  hashtable.py  longToShort.py  page_extraction.ipynb  pyproject.toml  requirements.txt  server.py  test_pd.py
baselines/: ScholarQA_Generated.txt  evaluation_results.csv  evaluation_results_20250329_020406 - Kopie.csv  evaluation_results_20250329_022834 - Kopie.csv  evaluation_results_20250329_024219.csv  evaluation_results_20250329_035037.csv  evaluation_results_20250329_053743.csv  generate_related_work_baseline.py  generate_related_work_baseline_Mistral.py  rag_demo.py  simple_agentic_workflow.py  simple_rag_workflow.py  workflow_demo.py
citegeist/: baseline_old.py  generator.py
data/: attention-paper.json  output_10_2_03.csv  output_full_pdf.csv  output_related_work_scores.csv  output_related_work_scores_gemini.csv  output_related_work_scores_mistral.csv  papers-arxiv-ids.csv  papers.csv
data_handling/: data_ingest.py  data_ingest_filtered.py
eval/: Gemini_Evaluator.py  clustering.py  eval.py  evaluation-arxiv-ids-full-pdf.py  evaluation-arxiv-ids.py  evaluation-baseline.py  evaluation-old.py  evaluation-optimized-pipeline-full-pdf.py  evaluation-optimized-pipeline.py  evaluation-win-rate.py
evaluation/: Gemini_Evaluator.py  baseline_old.py  clustering.py  eval.py  eval_anthropic.py  eval_gpt.py  evaluation-arxiv-ids-full-pdf.py  evaluation-arxiv-ids.py  evaluation-baseline.py  evaluation-old.py  evaluation-optimized-pipeline-full-pdf.py  evaluation-optimized-pipeline.py  evaluation-win-rate.py
examples/: baseline.ipynb  diversity_plus_extraction.ipynb  example.py  llm_clients.py  page_extraction.ipynb  related_work.py  related_work_from_pdf.py  scientific_question.py  test_pd.py  video-demo.py
frontend/: index.html
hash/: README.md  hash.py  hash_merged.py  (+4 more)
(+98 files in other folders)
