[tool.poetry]
name = "citegeist"
version = "0.0.0"
description = "Delivers a related works section and all the included citations."
authors = [
    "Carl-Leander Henneking <ch2273@cornell.edu>",
    "Claas Beger <cbb89@cornell.edu>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chenneking/citegeist"
repository = "https://github.com/chenneking/citegeist"
packages = [
    { include = "citegeist" }
]

[tool.poetry.dependencies]
python = ">=3.12"

# TODO: update these dependencies!
# Core dependencies used by citegeist:
bertopic = "^0.16.4"
sentence-transformers = "^3.3.1"
pymilvus = "^2.5.0"
python-dotenv = "^1.0.1"

# Web-App dependencies are optional:
fastapi = { version = "^0.115.5", optional = true }
uvicorn = { version = "^0.32.1", optional = true }

[tool.poetry.extras]
# Extra group for users that want to use the webapp logic
webapp = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"