[project]
name = "citegeist"
version = "0.0.0"
description = "Generates a relate work analysis including all used citations."
authors = [
    {name = "Carl-Leander Henneking", email = "ch2273@cornell.edu"},
    {name = "Claas Beger", email = "cbb89@cornell.edu"}
]
readme = "README.md"
urls = { Repository = "https://github.com/chenneking/citegeist" }

requires-python = ">=3.12"

# TODO: update these dependencies!
# Core dependencies used by citegeist:
dependencies = [
    "bertopic>=0.16.4,<0.17.0",
    "sentence-transformers>=3.3.1,<4.0.0",
    "pymilvus>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.1"
]


[project.optional-dependencies]
webapp = [
    "fastapi>=0.115.5,<0.116.0",
    "uvicorn>=0.32.1,<0.33.0"
]
dev = [
    "black>=25.1.0,<26.0.0",
    "flake8>=7.1.2,<8.0.0",
    "isort>=6.0.1,<7.0.0",
    "pre-commit>=4.2.0,<5.0.0"
]

[tool.black]
line-length = 121
skip-string-normalization = false
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"